2009-10-28  Michael Klapper <michael.klapper@aoemedia.de>
	* Add initial

--------------------
SVN ID: $Id: ChangeLog $