@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Connect the lowlevel cleaner to the scheduler',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '0.0.1',
+	'version' => '0.1.1',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
