@@ -8,6 +8,9 @@
 		<languageKey index="default" type="array">
             <label index="syslog.email">E-Mail</label>
             <label index="syslog.logLevel">Log level to view</label>
+            <label index="syslog.hours">Showing entries from the last x hour</label>
+            <label index="msg.noEmail">Please enter an email address</label>
+            <label index="msg.noHours">Please enter an amount of hours</label>
 		</languageKey>
 	</data>
 </T3locallang>
